--- a/SwordDemoLibrary/app/src/main/res/layout/drag_listener_grid_view.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/drag_listener_grid_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.swordlibrary.view.DragListenerGridView 
+<sword.view.DragListenerGridView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -35,4 +35,4 @@
         android:layout_height="wrap_content"
         android:background="#546E7A" />
 
-</com.example.swordlibrary.view.DragListenerGridView>
+</sword.view.DragListenerGridView>
