--- a/SwordDemoLibrary/app/src/main/res/layout/drag_to_collect_layout.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/drag_to_collect_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.swordlibrary.view.DragToCollectLayout
+<sword.view.DragToCollectLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -38,4 +38,4 @@
         app:layout_constraintStart_toStartOf="parent"
         android:orientation="horizontal" />
 
-</com.example.swordlibrary.view.DragToCollectLayout>
+</sword.view.DragToCollectLayout>
