--- a/SwordDemoLibrary/app/src/main/res/layout/constraint_center_in_parent.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/constraint_center_in_parent.xml
@@ -1,11 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    
-    <ImageView
+
+    <!--  view 居中于父容器  -->
+    <View
+        android:id="@+id/view"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:background="@color/color_gray"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!--  buton 居中于 view 底部  -->
+    <Button
+        android:id="@+id/button"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:background="@drawable/button_background_circle_corner"
+        android:text="关注"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="@id/view"
+        app:layout_constraintEnd_toEndOf="@id/view"
+        app:layout_constraintStart_toStartOf="@id/view"
+        app:layout_constraintTop_toBottomOf="@+id/view" />
+
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textview1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="99"
+        android:textSize="80dp"
+        android:textColor="@android:color/white"
+        android:background="@color/common_accent_color"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/button"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <!--  文字底部对齐  -->
+    <TextView
+        android:id="@+id/textview2"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:textSize="12dp"
+        android:text="%"
+        app:layout_constraintBottom_toBottomOf="@id/textview1"
+        app:layout_constraintLeft_toRightOf="@id/textview1"/>
+
+    <!--  文字基准线对齐  -->
+    <View
+        android:id="@+id/view3"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@color/color_gray"
+        app:layout_constraintBaseline_toBaselineOf="@id/textview1"
+        app:layout_constraintLeft_toRightOf="@id/textview1"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
