--- a/SwordDemoLibrary/app/src/main/res/layout/constraint_horizontal_chain_style.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/constraint_horizontal_chain_style.xml
@@ -11,11 +11,11 @@
         android:layout_height="wrap_content"
         android:text="水平约束链风格：packed"
         android:textAlignment="center"
-        tools:ignore="HardcodedText"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/view1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText" />
 
     <!--  约束链风格：packed  -->
     <View
@@ -52,42 +52,42 @@
         android:layout_height="wrap_content"
         android:text="水平约束链风格：spread"
         android:textAlignment="center"
-        tools:ignore="HardcodedText"
-        app:layout_constraintTop_toBottomOf="@id/view1"
         app:layout_constraintBottom_toTopOf="@id/view4"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view1"
+        tools:ignore="HardcodedText" />
 
     <View
         android:id="@+id/view4"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:background="@color/common_accent_color"
         android:layout_marginTop="5dp"
+        android:background="@color/common_accent_color"
         app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintTop_toBottomOf="@id/spread_title"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/view5"/>
+        app:layout_constraintRight_toLeftOf="@id/view5"
+        app:layout_constraintTop_toBottomOf="@id/spread_title" />
 
     <View
         android:id="@+id/view5"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:background="@color/common_button_disable_color"
-        app:layout_constraintTop_toTopOf="@id/view4"
         app:layout_constraintBottom_toBottomOf="@id/view4"
         app:layout_constraintLeft_toRightOf="@id/view4"
-        app:layout_constraintRight_toLeftOf="@id/view6"/>
+        app:layout_constraintRight_toLeftOf="@id/view6"
+        app:layout_constraintTop_toTopOf="@id/view4" />
 
     <View
         android:id="@+id/view6"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:background="@color/common_button_pressed_color"
+        app:layout_constraintBottom_toBottomOf="@id/view4"
         app:layout_constraintLeft_toRightOf="@id/view5"
-        app:layout_constraintTop_toTopOf="@id/view4"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/view4"/>
+        app:layout_constraintTop_toTopOf="@id/view4" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/spread_inside_title"
@@ -95,42 +95,93 @@
         android:layout_height="wrap_content"
         android:text="水平约束链风格：spread_inside"
         android:textAlignment="center"
-        tools:ignore="HardcodedText"
-        app:layout_constraintTop_toBottomOf="@id/view4"
         app:layout_constraintBottom_toTopOf="@id/view7"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view4"
+        tools:ignore="HardcodedText" />
 
     <View
         android:id="@+id/view7"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:background="@color/common_accent_color"
         android:layout_marginTop="5dp"
+        android:background="@color/common_accent_color"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintTop_toBottomOf="@id/spread_inside_title"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/view8"/>
+        app:layout_constraintRight_toLeftOf="@id/view8"
+        app:layout_constraintTop_toBottomOf="@id/spread_inside_title" />
 
     <View
         android:id="@+id/view8"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:background="@color/common_button_disable_color"
-        app:layout_constraintTop_toTopOf="@id/view7"
         app:layout_constraintBottom_toBottomOf="@id/view7"
         app:layout_constraintLeft_toRightOf="@id/view7"
-        app:layout_constraintRight_toLeftOf="@id/view9"/>
+        app:layout_constraintRight_toLeftOf="@id/view9"
+        app:layout_constraintTop_toTopOf="@id/view7" />
 
     <View
         android:id="@+id/view9"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:background="@color/common_button_pressed_color"
+        app:layout_constraintBottom_toBottomOf="@id/view7"
         app:layout_constraintLeft_toRightOf="@id/view8"
-        app:layout_constraintTop_toTopOf="@id/view7"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/view7"/>
+        app:layout_constraintTop_toTopOf="@id/view7" />
 
+    <!--  固定宽高比  -->
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/dimension_ration_title_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="宽高比为 2:1，layout_width=0，宽度根据比例计算"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@id/dimension_ration_1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view7"
+        tools:ignore="HardcodedText" />
+
+    <!--  高度固定，宽高比 2:1  -->
+    <View
+        android:id="@+id/dimension_ration_1"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/color_orange"
+        app:layout_constraintBottom_toTopOf="@id/dimension_ration_title_2"
+        app:layout_constraintDimensionRatio="2:1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dimension_ration_title_1" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/dimension_ration_title_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="宽高比属性值为 'H, 2:1'，宽高都为 0，H 表示高度通过比例计算，宽度充满约束，下图宽度为高度的 2 倍"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@id/dimension_ration_1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dimension_ration_1"
+        tools:ignore="HardcodedText" />
+
+    <!--  高度固定，宽高比 2:1  -->
+    <View
+        android:id="@+id/dimension_ration_2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/color_orange"
+        app:layout_constraintDimensionRatio="H, 2:1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dimension_ration_title_2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
