--- a/SwordDemoLibrary/app/src/main/res/xml/motion_layout_hen_coder.xml
+++ b/SwordDemoLibrary/app/src/main/res/xml/motion_layout_hen_coder.xml
@@ -40,51 +40,85 @@
     <ConstraintSet android:id="@+id/start">
         <Constraint
             android:id="@id/h"
-            android:textColor="@color/color_gray"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/e"/>
+            app:layout_constraintBottom_toTopOf="@id/e">
+            <CustomAttribute
+                app:attributeName="textColor"
+                app:customColorValue="@color/color_gray"/>
+            
+        </Constraint>
         
         <Constraint
             android:id="@id/e"
-            android:textColor="@color/color_gray"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             app:layout_constraintStart_toStartOf="@id/h"
-            app:layout_constraintTop_toBottomOf="@id/h"/>
+            app:layout_constraintTop_toBottomOf="@id/h">
+            
+            <CustomAttribute
+                app:attributeName="textColor"
+                app:customColorValue="@color/color_gray"/>
+        </Constraint>
         
         <Constraint
             android:id="@id/n"
-            android:textColor="@color/color_gray"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             app:layout_constraintStart_toStartOf="@id/h"
-            app:layout_constraintTop_toBottomOf="@id/e"/>
+            app:layout_constraintTop_toBottomOf="@id/e">
+            
+            <CustomAttribute
+                app:attributeName="textColor"
+                app:customColorValue="@color/color_gray"/>
+            
+        </Constraint>
     </ConstraintSet>
     
     
     <ConstraintSet
         android:id="@+id/end">
         
-        <Constraint
-            android:id="@id/h"
-            android:textColor="@color/colorAccent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
+        <Constraint android:id="@id/h"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/e"
             app:layout_constraintRight_toLeftOf="@id/e"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="@id/e">
+            
+            <CustomAttribute
+                app:attributeName="textColor"
+                app:customColorValue="@color/colorAccent"/>
+        </Constraint>
         
         <Constraint
-            android:id="@id/e"
-            android:textColor="@color/color_gray"
-            app:layout_constraintLeft_toRightOf="@id/h"
-            app:layout_constraintTop_toTopOf="@id/h"
-            app:layout_constraintRight_toLeftOf="@id/n"
-            app:layout_constraintBottom_toBottomOf="@id/h"/>
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@id/e">
+            
+            <CustomAttribute
+                app:attributeName="textColor"
+                app:customColorValue="@color/color_gray"/>
+        </Constraint>
         
         <Constraint
             android:id="@id/n"
-            android:textColor="@color/common_accent_color"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             app:layout_constraintLeft_toRightOf="@id/e"
-            app:layout_constraintTop_toTopOf="@id/h"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/h"/>
+            app:layout_constraintTop_toTopOf="@id/e"
+            app:layout_constraintBottom_toBottomOf="@id/e">
+            
+            <CustomAttribute
+                app:attributeName="textColor"
+                app:customColorValue="@color/common_accent_color"/>
+        </Constraint>
     </ConstraintSet>
 
 </MotionScene>
