--- a/SwordDemoLibrary/app/src/main/res/layout/motion_layout_youtube.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/motion_layout_youtube.xml
@@ -1,26 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    app:layoutDescription="@xml/motion_layout_youtube">
     
     <ImageView
         android:id="@+id/cat"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        android:src="@drawable/cat_1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:src="@drawable/cat_1" />
+
+    <ImageView
+        android:id="@+id/play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_play_arrow_gray_32dp"
+        android:layout_marginRight="16dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@id/cat"
+        app:layout_constraintRight_toLeftOf="@id/clear"
+        app:layout_constraintBottom_toBottomOf="@id/cat"
+        tools:ignore="ContentDescription,RtlHardcoded" />
 
     <ScrollView
+        android:id="@+id/text_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cat"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_height="0dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -29,4 +37,4 @@
             android:text="@string/large_text"/>
     </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
