--- a/SwordDemoLibrary/app/src/main/res/layout/motion_layout_youtube.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/motion_layout_youtube.xml
@@ -19,9 +19,19 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_play_arrow_gray_32dp"
         android:layout_marginRight="16dp"
-        android:visibility="gone"
         app:layout_constraintTop_toTopOf="@id/cat"
         app:layout_constraintRight_toLeftOf="@id/clear"
+        app:layout_constraintBottom_toBottomOf="@id/cat"
+        tools:ignore="ContentDescription,RtlHardcoded" />
+
+    <ImageView
+        android:id="@+id/clear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_clear_gray_32dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/cat"
         app:layout_constraintBottom_toBottomOf="@id/cat"
         tools:ignore="ContentDescription,RtlHardcoded" />
 
@@ -29,12 +39,18 @@
         android:id="@+id/text_container"
         android:layout_width="match_parent"
         android:layout_height="0dp">
-
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:text="@string/large_text"/>
     </ScrollView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/windowBackground"
+        app:menu="@menu/bottom_nav_menu" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
