--- a/SwordDemoLibrary/app/src/main/res/xml/motion_layout_youtube.xml
+++ b/SwordDemoLibrary/app/src/main/res/xml/motion_layout_youtube.xml
@@ -2,18 +2,44 @@
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <Transition app:duration="1000">
+    <Transition app:duration="1000"
+        app:constraintSetStart="@id/start"
+        app:constraintSetEnd="@id/end">
         <OnSwipe
             app:dragDirection="dragDown"
-            app:touchRegionId="@+id/cat_1" />
+            app:touchRegionId="@id/cat" />
 
         <KeyFrameSet>
             <KeyPosition
+                app:curveFit="linear"
                 app:framePosition="90"
                 app:keyPositionType="deltaRelative"
-                app:motionTarget="@id/cat_1"
+                app:motionTarget="@id/cat"
+                app:percentWidth="0"
                 app:percentX="0"
-                app:percentY="0.9" />
+                app:percentY="0.9"/>
+            
+            <KeyPosition
+                app:motionTarget="@id/text_container"
+                app:curveFit="linear"
+                app:framePosition="90"
+                app:percentWidth="0"/>
+            
+            <KeyAttribute
+                app:motionTarget="@id/text_container"
+                app:framePosition="75"
+                android:alpha="0"/>
+            
+            <KeyAttribute
+                app:motionTarget="@id/play"
+                app:framePosition="90"
+                android:alpha="0.1"/>
+            
+            <KeyAttribute
+                app:motionTarget="@id/clear"
+                app:framePosition="90"
+                android:alpha="0.1"/>
+                
         </KeyFrameSet>
 
     </Transition>
@@ -27,33 +53,68 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
-
         </Constraint>
 
         <Constraint
             android:id="@id/text_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cat"/>
-    </ConstraintSet>
-
-    <ConstraintSet android:id="@+id/end">
-
-        <Constraint android:id="@id/cat"
-            android:layout_width="0dp"
-            android:layout_height="54dp"
-            app:layout_constraintDimensionRatio="H, 1:2.5"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
 
         <Constraint android:id="@id/play">
-            <PropertySet
-                android:visibility="gone"/>
+            <PropertySet android:visibility="invisible"/>
         </Constraint>
 
         <Constraint android:id="@id/clear">
-            <PropertySet android:visibility="gone"/>
+            <PropertySet android:visibility="invisible"/>
         </Constraint>
+
+        <Constraint
+            android:id="@id/bottom_navi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_container"/>
+    </ConstraintSet>
+
+    <ConstraintSet android:id="@+id/end">
+        <Constraint android:id="@id/cat"
+            android:layout_width="0dp"
+            android:layout_height="54dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
+            app:layout_constraintDimensionRatio="H, 1:2.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/bottom_navi"/>
+
+        <Constraint
+            android:id="@id/text_container"
+            android:alpha="0"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cat"
+            app:layout_constraintBottom_toBottomOf="@id/cat"/>
+
+        <Constraint android:id="@id/play">
+            <PropertySet android:visibility="visible"/>
+        </Constraint>
+
+        <Constraint android:id="@id/clear">
+            <PropertySet android:visibility="visible"/>
+        </Constraint>
+        
+        <Constraint
+            android:id="@id/bottom_navi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </ConstraintSet>
 </MotionScene>
