--- a/SwordDemoLibrary/app/src/main/res/xml/motion_layout_youtube.xml
+++ b/SwordDemoLibrary/app/src/main/res/xml/motion_layout_youtube.xml
@@ -2,14 +2,15 @@
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <Transition app:duration="1000"
+    <Transition
+        app:constraintSetEnd="@id/end"
         app:constraintSetStart="@id/start"
-        app:constraintSetEnd="@id/end">
+        app:duration="1000">
         <OnSwipe
             app:dragDirection="dragDown"
             app:touchRegionId="@id/cat" />
-
         <KeyFrameSet>
+            <!-- 从 0% 到 90% 这段时间内 R.id.cat 这个 View 的 X 位置保持不变，Y 的位置从起始位置到达距离终点 Y 10% 的位置，宽度保持不变 -->
             <KeyPosition
                 app:curveFit="linear"
                 app:framePosition="90"
@@ -17,31 +18,29 @@
                 app:motionTarget="@id/cat"
                 app:percentWidth="0"
                 app:percentX="0"
-                app:percentY="0.9"/>
-            
+                app:percentY="0.9" />
+            <!-- 从 0% 到 90% 这段时间内 R.id.text_container 这个 View 的宽度保持不变 -->
             <KeyPosition
-                app:motionTarget="@id/text_container"
                 app:curveFit="linear"
                 app:framePosition="90"
-                app:percentWidth="0"/>
-            
-            <KeyAttribute
                 app:motionTarget="@id/text_container"
+                app:percentWidth="0" />
+            <!-- 从 0% 到 75% 这段时间内 R.id.text_container 这个 View 的的透明度从起始状态变为 0 -->
+            <KeyAttribute
+                android:alpha="0"
                 app:framePosition="75"
-                android:alpha="0"/>
-            
+                app:motionTarget="@id/text_container" />
+            <!-- 从 0% 到 90% 这段时间内 R.id.play 这个 View 的的透明度从起始状态变为 0.1 -->
             <KeyAttribute
-                app:motionTarget="@id/play"
+                android:alpha="0.1"
                 app:framePosition="90"
-                android:alpha="0.1"/>
-            
+                app:motionTarget="@id/play" />
+            <!-- 从 0% 到 90% 这段时间内 R.id.play 这个 View 的的透明度从起始状态变为 0.1 -->
             <KeyAttribute
-                app:motionTarget="@id/clear"
+                android:alpha="0.1"
                 app:framePosition="90"
-                android:alpha="0.1"/>
-                
+                app:motionTarget="@id/clear" />
         </KeyFrameSet>
-
     </Transition>
 
 
@@ -52,8 +51,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-        </Constraint>
+            app:layout_constraintTop_toTopOf="parent"></Constraint>
 
         <Constraint
             android:id="@id/text_container"
@@ -62,14 +60,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cat"/>
+            app:layout_constraintTop_toBottomOf="@id/cat" />
 
         <Constraint android:id="@id/play">
-            <PropertySet android:visibility="invisible"/>
+            <PropertySet android:visibility="invisible" />
         </Constraint>
 
         <Constraint android:id="@id/clear">
-            <PropertySet android:visibility="invisible"/>
+            <PropertySet android:visibility="invisible" />
         </Constraint>
 
         <Constraint
@@ -78,43 +76,44 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_container"/>
+            app:layout_constraintTop_toBottomOf="@id/text_container" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
-        <Constraint android:id="@id/cat"
+        <Constraint
+            android:id="@id/cat"
             android:layout_width="0dp"
             android:layout_height="54dp"
             android:layout_marginTop="2dp"
             android:layout_marginBottom="2dp"
+            app:layout_constraintBottom_toTopOf="@id/bottom_navi"
             app:layout_constraintDimensionRatio="H, 1:2.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/bottom_navi"/>
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Constraint
             android:id="@id/text_container"
-            android:alpha="0"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:alpha="0"
+            app:layout_constraintBottom_toBottomOf="@id/cat"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cat"
-            app:layout_constraintBottom_toBottomOf="@id/cat"/>
+            app:layout_constraintTop_toBottomOf="@id/cat" />
 
         <Constraint android:id="@id/play">
-            <PropertySet android:visibility="visible"/>
+            <PropertySet android:visibility="visible" />
         </Constraint>
 
         <Constraint android:id="@id/clear">
-            <PropertySet android:visibility="visible"/>
+            <PropertySet android:visibility="visible" />
         </Constraint>
-        
+
         <Constraint
             android:id="@id/bottom_navi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent" />
     </ConstraintSet>
 </MotionScene>
