--- a/SwordDemoLibrary/app/src/main/res/xml/motion_layout_youtube_film_like.xml
+++ b/SwordDemoLibrary/app/src/main/res/xml/motion_layout_youtube_film_like.xml
@@ -18,6 +18,8 @@
             <KeyPosition
                 app:motionTarget="@id/header_container"
                 app:percentHeight="0"
+                app:keyPositionType="deltaRelative"
+                app:percentY="0"
                 app:framePosition="50"/>
             
             <KeyAttribute
@@ -38,6 +40,7 @@
             <KeyPosition
                 app:motionTarget="@id/film_image"
                 app:framePosition="50"
+                app:keyPositionType="parentRelative"
                 app:percentX="0.5"
                 app:percentY="0.5"
                 app:percentHeight="0"
@@ -68,24 +71,35 @@
         
     </Transition>
     
-    <ConstraintSet
-        android:id="@+id/start">
+    <ConstraintSet android:id="@+id/start">
+        <Constraint
+            android:id="@id/fab_favourite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:pathMotionArc="startVertical"
+            app:layout_constraintLeft_toLeftOf="@id/header_container"
+            app:layout_constraintRight_toRightOf="@id/header_container"
+            app:layout_constraintTop_toBottomOf="@id/header_container"
+            app:layout_constraintBottom_toBottomOf="@id/header_container"/>
+
+
     </ConstraintSet>
 
-    <ConstraintSet
-        android:id="@+id/end">
+    <ConstraintSet android:id="@+id/end">
         
         <Constraint
             android:id="@id/header_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
         
         <Constraint
             android:id="@id/film_image"
-            android:layout_height="0dp"
-            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -95,6 +109,8 @@
             android:id="@id/fab_favourite"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
     </ConstraintSet>
