--- a/SwordDemoLibrary/app/src/main/res/xml/motion_layout_hen_coder.xml
+++ b/SwordDemoLibrary/app/src/main/res/xml/motion_layout_hen_coder.xml
@@ -90,7 +90,7 @@
             
             <CustomAttribute
                 app:attributeName="textColor"
-                app:customColorValue="@color/colorAccent"/>
+                app:customColorValue="@color/common_accent_color"/>
         </Constraint>
         
         <Constraint
