--- a/SwordDemoLibrary/app/src/main/res/layout/material_edit_text_layout.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/material_edit_text_layout.xml
@@ -20,7 +20,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@color/common_accent_color"
         android:layout_marginTop="20dp">
 
         <androidx.appcompat.widget.AppCompatEditText
