--- a/SwordDemoLibrary/app/src/main/res/layout/motion_youtube_film_like.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/motion_youtube_film_like.xml
@@ -12,7 +12,7 @@
         android:id="@+id/header_container"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/common_accent_color"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
@@ -68,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/file_description_title"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/common_accent_color"
         android:textSize="16sp"
         android:padding="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
