--- a/SwordDemoLibrary/app/src/main/res/layout/motion_layout_youtube.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/motion_layout_youtube.xml
@@ -28,7 +28,7 @@
         android:id="@+id/clear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_clear_gray_32dp"
+        android:src="@drawable/cross"
         android:layout_marginRight="16dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/cat"
